--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
             <version>${scala.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.mongodb</groupId>
+            <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>0.9</version>
         </dependency>
@@ -56,6 +56,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.5</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-compiler</artifactId>
+            <version>${scala.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -81,6 +87,7 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
             </plugin>
         </plugins>
