--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>0.11a</version>
+            <version>0.11</version>
         </dependency>
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
