--- a/pom.xml
+++ b/pom.xml
@@ -107,10 +107,50 @@
         </plugins>
     </reporting>
 
+    <profiles>
+        <profile>
+            <id>coverage</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>cobertura-maven-plugin</artifactId>
+                        <version>2.3</version>
+                        <configuration>
+                            <quiet>true</quiet>
+                            <formats>
+                                <format>xml</format>
+                                <format>html</format>
+                            </formats>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>cobertura</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>${java.src.version}</source>
+                            <target>${java.src.version}</target>
+                            <optimise>true</optimise>
+                            <debug>true</debug>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <scala.version>2.7.5</scala.version>
         <jdk.version>1.6</jdk.version>
+        <java.src.version>1.5</java.src.version>
     </properties>
 
     <prerequisites>
