--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,17 @@
                         <arg>-g:vars</arg>
                         <arg>-explaintypes</arg>
                     </args>
+                    <launchers>
+                        <launcher>
+                            <!-- mvn scala:run -Dlauncher=overhead -->
+                            <id>overhead</id>
+                            <mainClass>com.osinka.mongodb.benchmark.overhead</mainClass>
+                            <args>
+                                <arg>50000</arg>
+                                <arg>4</arg>
+                            </args>
+                        </launcher>
+                    </launchers>
                 </configuration>
             </plugin>
             <plugin>
