--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <excludes>
+                        <exclude>com/osinka/mongodb/benchmark/**</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
