--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,7 @@
                         <arg>-unchecked</arg>
                         <arg>-g:vars</arg>
                         <arg>-explaintypes</arg>
+                        <arg>-deprecation</arg>
                     </args>
                     <launchers>
                         <launcher>
@@ -168,7 +169,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.7.7</scala.version>
+        <scala.version>2.8.0.Beta1-RC1</scala.version>
         <jdk.version>1.6</jdk.version>
         <java.src.version>1.5</java.src.version>
     </properties>
