--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <name>Scala-Tools Maven2 Repository</name>
             <url>http://scala-tools.org/repo-releases</url>
         </repository>
+        <repository>
+            <id>scala-tools.org.snapshots</id>
+            <name>Scala-Tools Maven2 Snapshots Repository</name>
+            <url>http://scala-tools.org/repo-snapshots</url>
+        </repository>
     </repositories>
 
     <pluginRepositories>
@@ -49,7 +54,7 @@
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
             <artifactId>specs</artifactId>
-            <version>(1.4,)</version>
+            <version>1.6.1-${scala.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
