--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
                 </executions>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
+                    <jvmArgs>
+                        <jvmArg>-Xms64m</jvmArg>
+                        <jvmArg>-Xmx1024m</jvmArg>
+                    </jvmArgs>
                     <args>
                         <arg>-unchecked</arg>
                         <arg>-g:vars</arg>
