--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
             <artifactId>specs</artifactId>
-            <version>1.6.1-${scala.version}</version>
+            <version>1.6.1-2.8.0.Beta1-RC1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -178,7 +178,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.8.0.Beta1-RC1</scala.version>
+        <scala.version>2.8.0-SNAPSHOT</scala.version>
         <jdk.version>1.6</jdk.version>
         <java.src.version>1.5</java.src.version>
     </properties>
