--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
                             <mainClass>com.osinka.mongodb.benchmark.overhead</mainClass>
                             <jvmArgs>
                                 <jvmArg>-Xshare:off</jvmArg>
+                                <!-- jvmArg>-Xmx48m</jvmArg -->
                             </jvmArgs>
                             <args>
                                 <arg>50000</arg>
