--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
     <reporting>
         <plugins>
             <plugin>
+                <!-- mvn scala:doc -->
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
                 <version>2.12.2</version>
