--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,10 @@
                 </executions>
                 <configuration>
                     <scalaVersion>${scala.version}</scalaVersion>
+                    <jvmArgs>
+                        <!-- jvmArg>-Xms64m</jvmArg -->
+                        <jvmArg>-Xmx256m</jvmArg>
+                    </jvmArgs>
                     <args>
                         <arg>-unchecked</arg>
                         <arg>-deprecation</arg>
