--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.osinka</groupId>
     <artifactId>mongo-scala-driver</artifactId>
-    <version>0.7.3</version>
+    <version>0.7.5-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>MongoDB driver for Scala</name>
     <inceptionYear>2009</inceptionYear>
@@ -12,25 +12,56 @@
         <name>Osinka.com</name>
         <url>http://www.osinka.com</url>
     </organization>
-    <developers>
-        <developer>
-            <email>azarov@osinka.ru</email>
-            <name>Alexander Azarov</name>
-        </developer>
-    </developers>
-    <mailingLists>
-        <mailingList>
-            <name>mongo-scala-driver mailing list</name>
-            <archive>http://groups.google.com/group/mongodb-scala/topics</archive>
-            <post>mongodb-scala@googlegroups.com</post>
-        </mailingList>
-    </mailingLists>
     <licenses>
         <license>
             <name>Apache License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0</url>
         </license>
     </licenses>
+
+    <developers>
+        <developer>
+            <id>alaz</id>
+            <email>azarov@osinka.ru</email>
+            <name>Alexander Azarov</name>
+            <timezone>+3</timezone>
+        </developer>
+    </developers>
+
+    <mailingLists>
+        <mailingList>
+            <name>mongo-scala-driver Developer mailing list</name>
+            <archive>http://groups.google.com/group/mongodb-scala/topics</archive>
+            <post>mongodb-scala@googlegroups.com</post>
+            <subscribe>mongodb-scala+subscribe@googlegroups.com</subscribe>
+            <unsubscribe>mongodb-scala+unsubscribe@googlegroups.com</unsubscribe>
+        </mailingList>
+    </mailingLists>
+
+    <scm>
+        <connection>git:git://github.com/alaz/mongo-scala-driver.git</connection>
+        <developerConnection>git:git@github.com:alaz/mongo-scala-driver.git</developerConnection>
+        <url>http://github.com/alaz/mongo-scala-driver</url>
+    </scm>
+
+    <issueManagement>
+        <system>github</system>
+        <url>http://github.com/alaz/mongo-scala-driver/issues</url>
+    </issueManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus.scala-tools.org</id>
+            <name>Scala-Tools Distribution Repository for Releases</name>
+            <url>http://nexus.scala-tools.org/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus.scala-tools.org</id>
+            <name>Scala-Tools Distribution Repository for Snapshots</name>
+            <url>http://nexus.scala-tools.org/content/repositories/snapshots</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
 
     <repositories>
         <repository>
@@ -57,7 +88,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>1.2</version>
+            <version>1.3</version>
         </dependency>
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
@@ -159,6 +190,25 @@
                         <email>azarov@osinka.ru</email>
                         <author>Alexander Azarov</author>
                     </properties>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>2.0.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <instructions>
+                        <_versionpolicy>[$(@),$(version;+;$(@)))</_versionpolicy>
+                        <Export-Package>com.osinka.mongodb</Export-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>deploy</goals>
                 </configuration>
             </plugin>
         </plugins>
