--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
             <artifactId>specs_${scala.version}</artifactId>
-            <version>1.6.3</version>
+            <version>1.6.5-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -292,7 +292,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.8.0.Beta1</scala.version>
+        <scala.version>2.8.0.RC1</scala.version>
         <jdk.version>1.6</jdk.version>
         <java.src.version>1.5</java.src.version>
     </properties>
