--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.osinka</groupId>
     <artifactId>mongo-scala-driver</artifactId>
     <version>0.7.5-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
     <name>MongoDB driver for Scala</name>
     <inceptionYear>2009</inceptionYear>
 
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
             <artifactId>specs</artifactId>
-            <version>(1.4,)</version>
+            <version>(1.6,)</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -217,7 +217,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
