--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=Osinka.com
 project.name=MongoDB Scala Driver
 sbt.version=0.7.1
-project.version=0.7.5
+project.version=0.7.5-SNAPSHOT
 def.scala.version=2.7.7
 build.scala.versions=2.7.7
 project.initialize=false
