minor sbt tuning

--- a/project/build.properties
+++ b/project/build.properties
@@ -1,7 +1,7 @@
 #Project properties
 #Mon Apr 19 15:52:15 MSD 2010
 project.organization=Osinka.com
-project.name=MongoDB Scala Driver
+project.name=mongo-scala-driver
 sbt.version=0.7.1
 project.version=0.7.5-SNAPSHOT
 def.scala.version=2.7.7
