--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.osinka</groupId>
     <artifactId>mongo-scala-driver_${scala.version}</artifactId>
-    <version>0.7.5-SNAPSHOT</version>
+    <version>0.8.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
     <name>MongoDB driver for Scala</name>
     <inceptionYear>2009</inceptionYear>
@@ -209,7 +209,7 @@
                 <configuration>
                     <instructions>
                         <_versionpolicy>[$(@),$(version;+;$(@)))</_versionpolicy>
-                        <Export-Package>com.osinka.mongodb</Export-Package>
+                        <Export-Package>com.osinka.mongodb.*</Export-Package>
                     </instructions>
                 </configuration>
             </plugin>
