--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <developers>
         <developer>
             <id>alaz</id>
-            <email>azarov@osinka.ru</email>
+            <email>azarov@osinka.com</email>
             <name>Alexander Azarov</name>
             <timezone>+3</timezone>
         </developer>
@@ -166,7 +166,7 @@
             <plugin>
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
-                <version>1.5.1</version>
+                <version>1.6.0</version>
                 <configuration>
                     <header>${basedir}/src/etc/header.txt</header>
                     <quiet>false</quiet>
@@ -195,7 +195,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.0.0</version>
+                <version>2.0.1</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
@@ -207,7 +207,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.1.2</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
