--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
     </mailingLists>
 
     <scm>
-        <connection>git:git://github.com/alaz/mongo-scala-driver.git</connection>
-        <developerConnection>git:git@github.com:alaz/mongo-scala-driver.git</developerConnection>
+        <connection>scm:git:git://github.com/alaz/mongo-scala-driver.git</connection>
+        <developerConnection>scm:git:git@github.com:alaz/mongo-scala-driver.git</developerConnection>
         <url>http://github.com/alaz/mongo-scala-driver</url>
     </scm>
 
@@ -229,6 +229,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <version>2.0-beta-9</version>
                 <configuration>
                     <goals>deploy</goals>
                 </configuration>
