--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.0rc4</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>org.scala-tools.testing</groupId>
