--- a/pom.xml
+++ b/pom.xml
@@ -280,28 +280,30 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
-<!--                        <dependencies>
+                        <version>2.0-beta-9</version>
+                        <dependencies>
                             <dependency>
                                 <groupId>org.apache.maven.scm</groupId>
                                 <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.2</version>
+                                <version>1.1-db-1</version>
                             </dependency>
                         </dependencies>
--->                        <configuration>
+                        <configuration>
                             <goals>deploy</goals>
                         </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-scm-plugin</artifactId>
-<!--                        <dependencies>
+                        <version>1.3</version>
+                        <dependencies>
                             <dependency>
                                 <groupId>org.apache.maven.scm</groupId>
                                 <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.2</version>
+                                <version>1.1-db-1</version>
                             </dependency>
                         </dependencies>
--->                    </plugin>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
