--- a/pom.xml
+++ b/pom.xml
@@ -285,7 +285,7 @@
                             <dependency>
                                 <groupId>org.apache.maven.scm</groupId>
                                 <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.1-db-1</version>
+                                <version>1.2</version>
                             </dependency>
                         </dependencies>
                         <configuration>
@@ -300,7 +300,7 @@
                             <dependency>
                                 <groupId>org.apache.maven.scm</groupId>
                                 <artifactId>maven-scm-provider-gitexe</artifactId>
-                                <version>1.1-db-1</version>
+                                <version>1.2</version>
                             </dependency>
                         </dependencies>
                     </plugin>
