--- a/pom.xml
+++ b/pom.xml
@@ -340,7 +340,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.8.0.RC7</scala.version>
+        <scala.version>2.8.0</scala.version>
         <jdk.version>1.6</jdk.version>
         <java.src.version>1.5</java.src.version>
     </properties>
