prepare for version 0.8.2

--- a/project/build.properties
+++ b/project/build.properties
@@ -3,7 +3,7 @@
 project.organization=Osinka.com
 project.name=mongo-scala-driver
 sbt.version=0.7.3
-project.version=0.8.1-SNAPSHOT
+project.version=0.8.2
 scala.versions=2.8.0
 def.scala.version=2.7.7
 build.scala.versions=2.8.0
