sbt: mongo java driver 2.1

--- a/pom.xml
+++ b/pom.xml
@@ -170,11 +170,12 @@
             <plugin>
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
-                <version>1.6.0</version>
+                <version>1.8.0</version>
                 <configuration>
                     <header>${basedir}/src/etc/header.txt</header>
                     <quiet>false</quiet>
                     <failIfMissing>true</failIfMissing>
+                    <strictCheck>true</strictCheck>
                     <excludes>
                         <exclude>.git/**</exclude>
                         <exclude>.manager/**</exclude>
